--- a/Html/Index.html
+++ b/Html/Index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../CSS/leaderboard.css"> 
     <link rel="stylesheet" href="../CSS/leassons.css">
     <link rel="stylesheet" href="../CSS/task.css"> 
-    <link rel="stylesheet" href="../CSS/chart.css"> 
+    <link rel="stylesheet" href="../CSS/Chart.css"> 
     <link rel="stylesheet" href="../CSS/leacture.css"> 
     <link rel="stylesheet" href="../CSS/navbar.css"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
